apply plugin: 'java'
apply plugin: 'application'

//noinspection GroovyUnusedAssignment
mainClassName = 'org.rdtif.zaxslackbot.ZaxSlackBot'

repositories {
    mavenCentral()
    maven { url 'https://www.jitpack.io' }
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

test {
    useJUnitPlatform()
}

def junitVersion = '5.8.2'
def boltVersion = '1.23.0'
def logbackVersion = '1.2.11'
def slf4jVersion = '1.7.36'

dependencies {
    // Bolt API from Slack
    implementation group: 'com.slack.api', name: 'bolt', version: boltVersion
    implementation group: 'com.slack.api', name: 'bolt-servlet', version: boltVersion
    implementation group: 'com.slack.api', name: 'bolt-jetty', version: boltVersion

    implementation group: 'com.github.RDT-IF', name: 'zax', version: 'master-SNAPSHOT'

    implementation group: 'com.google.inject', name: 'guice', version: '5.1.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'

    // Logging
    implementation group: 'org.slf4j',      name: 'slf4j-api',       version: slf4jVersion
    runtimeOnly    group: 'ch.qos.logback', name: 'logback-classic', version: logbackVersion
    runtimeOnly    group: 'ch.qos.logback', name: 'logback-core',    version: logbackVersion

    // Test dependencies
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitVersion

    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitVersion
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: junitVersion

    testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.10'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.6.1'
    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'

}

jar {
    from sourceSets.main.allSource
    duplicatesStrategy DuplicatesStrategy.INCLUDE
    manifest {
        attributes(
                "Implementation-Title": "Zax",
                "Implementation-Version": getArchiveVersion(),
                'Main-Class': mainClassName
        )
    }
}
